--- a/index.html
+++ b/index.html
@@ -141,25 +141,25 @@
         </section>
 
         <!--"reach out" section-->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2881.4172387647486!2d-79.41494698427438!3d43.76419705326361!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b2d653d8cafa5%3A0x4e8178a4f977e965!2s100%20Upper%20Madison%20Ave%2C%20North%20York%2C%20ON%20M2N%206M4!5e0!3m2!1sen!2sca!4v1645209778404!5m2!1sen!2sca" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-            <div>
-                <h3>Run Buddy</h3>
-                <p>
-                    Any questions or concerns before signing up?
-                    <br/>
-                    Let us know and we'll be happy to talk.
-                </p>
-                <address>
-                    55 Main Street <br/>
-                    Some Town, Ca <br/>
-                    12345 <br/>
-                    P: 555.RUN.BUDZ (555.786.2839)<br/>
-                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-                </address>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2881.4172387647486!2d-79.41494698427438!3d43.76419705326361!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b2d653d8cafa5%3A0x4e8178a4f977e965!2s100%20Upper%20Madison%20Ave%2C%20North%20York%2C%20ON%20M2N%206M4!5e0!3m2!1sen!2sca!4v1645209778404!5m2!1sen!2sca" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <div>
+                    <h3>Run Buddy</h3>
+                    <p>
+                        Any questions or concerns before signing up?
+                         <br/>
+                        Let us know and we'll be happy to talk.
+                    </p>
+                    <address>
+                        55 Main Street <br/>
+                        Some Town, Ca <br/>
+                        12345 <br />
+                        P: 555.RUN.BUDZ (555.786.2839)<br/>
+                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                    </address>
+                </div>
             </div>
         </section>
 
