--- a/index.html
+++ b/index.html
@@ -151,6 +151,19 @@
             <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2881.4172387647486!2d-79.41494698427438!3d43.76419705326361!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b2d653d8cafa5%3A0x4e8178a4f977e965!2s100%20Upper%20Madison%20Ave%2C%20North%20York%2C%20ON%20M2N%206M4!5e0!3m2!1sen!2sca!4v1645209778404!5m2!1sen!2sca" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <div class="contact-form">
+                    <h3>Contact us</h3>
+                    <form>
+                        <label for="contact-name">Your Name</label>
+                        <input type="text" id="contact-name" placeholder="Your Name" />
+
+                        <label for="contact-message">Message</label>
+                        <textarea id="contact-message" placeholder="Message"></textarea>
+
+                        <button type="submit">Submit</button>
+                 </form>
+                </div><!--contact-form-->
+               
                 <div>
                     <h3>Run Buddy</h3>
                     <p>
