--- a/index.html
+++ b/index.html
@@ -55,14 +55,20 @@
                     <input class="form-input" type="tel" placeholder="Phone Number" name="number" id="number"/>
                     <p>
                         Have you worked with a trainer before?
-                        <input type="radio" name="trainer-confirm" id="trainer-yes"/>
-                        <label for="trainer-yes">Yes</label>
-                        <input type="radio" name="trainer-confirm" id="trainer-no"/>
-                        <label for="trainer-no">No</label>
+                        <span class="radio-wrapper">
+                            <input type="radio" name="trainer-confirm" id="trainer-yes"/>
+                            <label for="trainer-yes">Yes</label>
+                        </span>
+                        <span class="radio-wrapper">    
+                            <input type="radio" name="trainer-confirm" id="trainer-no"/>
+                            <label for="trainer-no">No</label>
+                        </span>
                     </p>
                     <p>
-                        <label for="over-yes">I acknowledge that I am at least 18 years of age.</label>
-                        <input type="checkbox" name="over-18" id="over-yes"/>
+                        <span class="checkbox-wrapper">
+                            <input type="checkbox" name="over-18" id="over-yes"/>
+                            <label for="over-yes">I acknowledge that I am at least 18 years of age.</label>
+                        </span>
                     </p>
                     <button type="submit">
                         Get Running!
